# notclicky

./: .gitignore  Cargo.toml  README.md  regen_fillers.rs  regen_fillers.sh
resources/: ModelInstructions.md  SOUL.md  skill-suggestion-rules.json
resources/skills/: airtable.md  apple-notes.md  apple-reminders.md  claude-code.md  claude-design.md  codex.md  excalidraw.md  findmy.md  github-auth.md  github-code-review.md  github-issues.md  github-pr-workflow.md  github-repo-management.md  google-workspace.md  imessage.md  linear.md  maps.md  notion.md  ocr-and-documents.md  spotify.md
resources/skills/airtable/: SKILL.md
resources/skills/apple-notes/: SKILL.md
resources/skills/blender/: SKILL.md
resources/skills/claude-code/: SKILL.md
resources/skills/claude-design/: SKILL.md
resources/skills/codex/: SKILL.md
resources/skills/create-onboarding-hello-world/: SKILL.md
resources/skills/cua-driver/: SKILL.md
resources/skills/excalidraw/: SKILL.md
resources/skills/github-auth/: SKILL.md
resources/skills/github-code-review/: SKILL.md
resources/skills/github-issues/: SKILL.md
resources/skills/github-pr-workflow/: SKILL.md
resources/skills/github-repo-management/: SKILL.md
resources/skills/gog/: SKILL.md
resources/wiki/: _backlinks.json  _index.md
src/: app.rs  lib.rs  main.rs  notclicky_app.rs
src/agent/: dock.rs  mod.rs  process.rs  session.rs
src/ai/: mod.rs  point_parser.rs  prefire.rs  sentence_splitter.rs  streaming_pipeline.rs
src/bridge/: mcp.rs  mod.rs  server.rs
src/memory/: conversation.rs  mod.rs  wiki.rs
src/overlay/: cursor.rs  integration.rs  mod.rs  wayland.rs  x11.rs
src/platform/: linux.rs  mod.rs  wayland.rs  x11.rs
src/screen/: capture.rs  mod.rs  wayland_capture.rs  x11_capture.rs
src/skills/: context.rs  loader.rs  mod.rs  suggestion.rs
src/ui/: chat.rs  mod.rs  panel.rs  settings.rs  tray.rs
src/voice/: assistant.rs  audio_player.rs  capture.rs  filler.rs  mod.rs  pipeline.rs  push_to_talk.rs  resample.rs  transcription.rs  transcription_deepgram.rs  transcription_whisper.rs  tts.rs  wake_word.rs
tests/: agent.rs  bridge.rs  config.rs  llm.rs  memory.rs  secrets.rs  skills.rs  stt.rs  tts.rs
(+39 files in other folders)
