[package]
name = "notclicky"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_2"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
dirs = "6"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
x11rb = { version = "0.13", features = ["xkb"] }
ksni = "0.2"
pipewire = "0.10"
whisper-rs = "0.16"

[dev-dependencies]
tempfile = "3"
